# Ball-Arithmetic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  apbar.c  apbar.cpp  apbar.h  apfp.c  apfp.h  apint.c  apint.h  bench_plot.sh  benchmark_mode.sh  example.c  install.sh  plot_benchmark.py  plot_runtime.py  plot_speedup.py  run-benchmark.sh
gprof-logs/: .apbar_add_apintshiftr_optim3.log.swp
include/: apbar.h  apbar2.h  apfp.h  apint.h  benchmark.h  test.h
rooflines/: apbar2-add.html  apbar2-add4.html  apbar2-mul.html  apbar2_optim1_all.html  apbar2_optim1_p32768.html  apbar2_optim1_p4096.html  apbar2_optim1_p4096_compare_p32768.html  apbar2_optim1_p512.html  apbar2_optim1_p64.html  report_roofline_samexp_add_32768.html  report_roofline_samexp_sub_32768.html
src/: apbar.c  apbar2-add4-example.c  apbar2-example.c  apfp.c  apint.c  arb-test.c  benchmark.c  example.c  karatsuba.c  profile_apbar.c  profile_apbar_sub.c  profile_karatsuba.c  roofline_multiprecision.c  unittest.c
